--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "license": "ISC",
     "dependencies": {
         "bcrypt": "^5.0.1",
+        "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
+        "busboy": "^1.4.0",
         "cors": "^2.8.5",
+        "dotenv": "^16.0.1",
         "express": "^4.17.1",
         "multer": "^1.4.3",
         "mysql2": "^2.3.0"
